# omnibase_infra

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CLAUDE.md  README.md  arch-handler-contract-compliance-allowlist.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: artifact-reconciliation-webhook.yml  baselines-scheduler.yml  build-and-push-migrate-image.yml  build-and-push-runtime.yml  check-handshake.yml  check-sibling-compat.yml  ci.yml  contract-validation.yml  cr-thread-gate.yml  dependency-cascade.yml  docker-build.yml  env-parity.yml  integration-test-check.yml  nightly-tests.yml  omni-standards-compliance.yml  plugin-pin-cascade.yml  release-python-dry-run.yml  release-python-reusable.yml  release.yml  runtime-rebuild-trigger.yml  test.yml  todo-audit-on-merge.yml
config/: shared_key_registry.yaml
contracts/runtime/: runtime_protocol.lock.json
contracts/services/: event_bus.contract.yaml  runtime.contract.yaml
deploy/: infra-watchdog.service  infra-watchdog.timer  install-infra-watchdog.sh
deploy/systemd/: onex-log-monitor.service
docker/: Dockerfile.migrate  Dockerfile.runtime  docker-compose.e2e.yml  docker-compose.infra.yml  docker-compose.runners.yml  entrypoint-runtime.sh  env-example-full.txt
docker/catalog/: bundles.yaml  model_registry.yaml
docker/keycloak/: omninode-realm.json
docker/migrations/: schema_fingerprint.sha256
docker/runners/: Dockerfile  entrypoint.sh  runner-monitor.sh
docs/: env-example-full.txt  env-master-template.env
docs/architecture/: EVENT_BUS_INTEGRATION_GUIDE.md  HANDLER_CLASSIFICATION_3_3_LLM_HTTP_TRANSPORT.md  HANDLER_CLASSIFICATION_POC_3_1.md  HANDLER_CLASSIFICATION_RULES.md  README.md  SHARED_ENUM_OWNERSHIP.md
docs/event-bus/: schema-handshake.md
docs/getting-started/: quickstart.md
docs/investigations/: OMN-3988-non-node-dirs-under-nodes.md
docs/migration/: MIGRATION_WIRE_DEFAULT_HANDLERS.md
docs/operations/: CI_BASELINE_OMNIBASE_INFRA.md  INFISICAL_SEED_VERIFICATION_OMN3898.md  K3S_DATA_PLANE_RUNBOOK.md
docs/patterns/: effect_boundary_testing.md
docs/runbooks/: apply-migrations.md
k8s/data-plane/: namespace.yaml  redpanda-service.yaml  redpanda-statefulset.yaml
scripts/: _infisical_util.py  ai.omninode.bare-clone-sync.plist  ai.omninode.caia-watchdog.plist  audit-branch-protection.py  audit-env-files.sh  backfill_capabilities.py  bootstrap-infisical.sh  caia-watchdog.sh  check-sibling-compat.sh  check-stale-images.sh  check_architecture.sh  check_contract_topic_parity.py  check_dockerfile_pins.py  check_event_registry_fingerprint.py  check_migration_freeze.sh  check_migration_required.py  check_migrations_complete.sh  check_no_cloud_bus_wrapper.sh  check_placeholder_topics.sh  check_required_env_vars.py  check_schema_fingerprint.py  check_shared_enum_ownership.py  check_subscribe_wiring_health.py  check_topic_drift.py  check_version_pins.py  ci_check_contract_discovery.py  ci_check_kafka_no_localhost_default.py  ci_check_runtime_env_passthrough.py  cloud-bus-tunnel.sh  compare_environments.py  configure_ledger_retention.py  container-error-to-linear.py  create_kafka_topics.py  demo-loop-assert.sh  demo_registry_contracts.py  demo_runtime_verification.py  deploy-runners.sh  deploy-runtime.sh  deploy-timers.sh  deploy-trigger.py  (+49 more)
scripts/ci/: run_compliance_sweep.py  run_contract_sweep.py  run_duplication_sweep.py
scripts/launchd/: com.omninode.monitor-logs.plist
scripts/systemd/: onex-build-loop.service  onex-build-loop.timer  onex-nightly-sweep.service  onex-nightly-sweep.timer
scripts/validation/: __init__.py  check_claudemd_references.py  check_kafka_no_hardcoded_fallback.sh  check_migration_conflicts.py  check_no_cloud_bus.sh  check_no_infra_inmemory_import.sh  check_published_events_consistency.py  check_stale_todos.py  check_topic_completeness.py  check_topic_literals.py  check_topic_suffix_exports.py  completeness-allowlist.yaml  lint_topic_names.py  run_topic_lint.sh  topic_literal_baseline.txt  topic_naming_baseline.txt  topic_placeholder_denylist.txt  validate_clean_root.py  validate_db_quality_gate.py  validate_markdown_links.py  validate_migration_freeze.py  validate_migration_sequence.py  validate_naming.py
src/omnibase_infra/: __init__.py  constants_topic_patterns.py
tests/: conftest.py  infrastructure_config.py
tests/audit/: __init__.py  test_io_violations.py  test_no_dead_delegation_flags.py
tests/chaos/: __init__.py  conftest.py  test_chaos_concurrent_scenarios.py  test_chaos_handler_failures.py  test_chaos_network_partitions.py  test_chaos_partial_failures.py  test_chaos_timeouts.py  test_data_integrity_at_least_once.py  test_data_integrity_correlation.py  test_data_integrity_deduplication.py  test_failure_modes_prod.py  test_recovery_circuit_breaker.py  test_recovery_dlq.py  test_recovery_restart_resume.py
tests/ci/: __init__.py  conftest.py  test_architecture_compliance.py  test_compose_no_nested_expansion.py  test_compose_required_env_coverage.py  test_docstring_edge_cases.py  test_env_parity.py  test_handler_architecture_invariants.py  test_plugin_env_service_completeness.py  test_pricing_manifest_schema.py  test_runtime_env_anchor.py  test_topic_parity.py  test_validate_migration_freeze.py  test_validate_migration_sequence.py  test_validate_no_direct_env.py
tests/helpers/: __init__.py  aiohttp_utils.py  ast_analysis.py  chaos_utils.py  deterministic.py  dispatchers.py  log_helpers.py  mock_helpers.py  path_utils.py  replay_utils.py  runtime_helpers.py  statistics_utils.py  test_statistics_utils.py  util_kafka.py  util_postgres.py
tests/integration/: conftest.py  test_agent_learning_e2e.py  test_artifact_reconciliation_pipeline.py  test_auto_wiring_manifest_integration.py  test_auto_wiring_namespace_discovery.py  test_bootstrap_sequence.py  test_catalog_roundtrip.py  test_code_embedded_enriched_topics.py  test_consumer_health_pipeline.py  test_dead_flag_removal_omn_8780.py  test_error_triage_e2e.py  test_handler_autowiring_compliance_followup.py  test_infisical_handler.py  test_introspect_cli.py  (+5 more)
(+3153 files in other folders)
